--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "circuit25-levelup": "file:",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.3",
     "install": "^0.13.0",
