--- a/package.json
+++ b/package.json
@@ -9,25 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/quicksand": "^5.2.6",
+    "chart.js": "^4.4.8",
     "circuit25-levelup": "file:",
     "clsx": "^2.1.1",
+    "d3-shape": "^3.2.0",
     "firebase": "^11.6.0",
     "framer-motion": "^12.6.3",
     "install": "^0.13.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.487.0",
-    "next": "15.2.4",
+    "motion": "^12.6.3",
+    "next": "^15.2.4",
     "npm": "^11.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "plotly.js": "^3.0.1",
+    "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
+    "react-plotly.js": "^2.6.0",
+    "recharts": "^2.15.2",
     "tailwind-merge": "^3.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/geojson": "^7946.0.16",
     "@types/leaflet": "^1.9.17",
     "@types/node": "^20.17.30",
+    "@types/plotly.js": "^2.35.4",
     "@types/react": "^19.1.0",
-    "@types/react-dom": "^19",
+    "@types/react-dom": "^19.1.1",
+    "@types/react-plotly.js": "^2.6.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
