--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "plotly.js": "^3.0.1",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
+    "react-circle-progress-bar": "^0.1.4",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
     "react-plotly.js": "^2.6.0",
@@ -34,6 +36,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/geojson": "^7946.0.16",
+    "@types/jquery": "^3.5.32",
     "@types/leaflet": "^1.9.17",
     "@types/node": "^20.17.30",
     "@types/plotly.js": "^2.35.4",
