--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
-# Virtual environment
+# Virtual environments
 venv/
 env/
 .env/
 myenv/
 
-# Byte-compiled / cache
+# Byte-compiled / cache files
 __pycache__/
 *.py[cod]
 
 # Logs
 *.log
 
-# DB files
+# Database files
 *.sqlite3
 *.db
 
@@ -20,11 +20,10 @@ __pycache__/
 dist/
 build/
 
-# VS Code
+# VS Code settings
 .vscode/
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Node.js dependencies
 /node_modules
 /.pnp
 .pnp.*
@@ -34,32 +33,32 @@ build/
 !.yarn/releases
 !.yarn/versions
 
-# testing
+# Testing coverage
 /coverage
 
-# next.js
+# Next.js build output
 /.next/
 /out/
 
-# production
+# Production build
 /build
 
-# misc
+# Miscellaneous files
 .DS_Store
 *.pem
 
-# debug
+# Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
+# Environment variable files (optional, can commit if needed)
 .env*
 
-# vercel
+# Vercel
 .vercel
 
-# typescript
+# TypeScript files
 *.tsbuildinfo
 next-env.d.ts
